--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-sails-socketio",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "An angular2 module for using the sails socket.io api",
   "main": "index.ts",
   "scripts": {
@@ -26,9 +26,12 @@
   },
   "homepage": "https://github.com/toniton/angular2-sails-socketio#readme",
   "dependencies": {
+    "@angular/core": "^4.2.3",
     "lodash": "^4.17.4",
-    "sails.io.js": "^1.1.10",
-    "@angular/core": "^4.0.2",
-    "rxjs": "^5.3.0"
+    "rxjs": "^5.4.1",
+    "sails.io.js": "^1.1.12"
+  },
+  "devDependencies": {
+    "tslint": "^5.4.3"
   }
 }
